--- a/static/animations.css
+++ b/static/animations.css
@@ -1,61 +1,47 @@
-@keyframes fadeInDown {
-  from {
+.info {
+  position: relative;
+  animation: fall 1s ease-in-out forwards;
+}
+
+@keyframes fall {
+  0% {
+    transform: translateY(-100px);
     opacity: 0;
-    transform: translate3d(0, -100%, 0);
   }
-
-  to {
+  100% {
+    transform: translateY(0);
     opacity: 1;
-    transform: none;
   }
 }
 
-@keyframes fadeInLeft {
-  from {
+.anchors {
+  position: relative;
+  animation: slipFromRight 1s ease-in-out forwards;
+}
+
+@keyframes slipFromRight {
+  0% {
+    transform: translateX(-100px);
     opacity: 0;
-    transform: translate3d(-100%, 0, 0);
   }
-
-  to {
+  100% {
+    transform: translateX(0);
     opacity: 1;
-    transform: none;
   }
 }
 
-@keyframes fadeInRight {
-  from {
+.credits {
+  position: relative;
+  animation: rise 1s ease-in-out forwards;
+}
+
+@keyframes rise {
+  0% {
+    transform: translateY(100px);
     opacity: 0;
-    transform: translate3d(10%, 0, 0);
   }
-
-  to {
+  100% {
+    transform: translateY(0);
     opacity: 1;
-    transform: none;
   }
-}
-
-.container .anchors {
-  animation-duration: 1s;
-  animation-fill-mode: both;
-  animation-timing-function: ease-in-out;
-  animation: fadeInLeft 1s;
-}
-
-.container h1,
-.container h2 {
-  animation-duration: 1s;
-  animation-fill-mode: both;
-  animation-timing-function: ease-in-out;
-  animation: fadeInDown 1s;
-}
-
-.container .credits {
-  animation-duration: 1s;
-  animation-fill-mode: both;
-  animation-timing-function: ease-in-out;
-  animation: fadeInRight 1s;
-}
-
-.container>.anchors>a>object {
-  transition: all 0.2s ease-in-out;
 }
