--- a/css/styles.css
+++ b/css/styles.css
@@ -7,7 +7,7 @@
 }
 
 body {
-  background-image: url("./background.jpg");
+  background-image: url("../public/background.jpg");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
